fix buy token modal on mobile

--- a/evergreen-front/src/components/MockUpPage/NftList/NftData/CollectionInfo/CollectionInfo.css
+++ b/evergreen-front/src/components/MockUpPage/NftList/NftData/CollectionInfo/CollectionInfo.css
@@ -146,7 +146,7 @@
   }
 
   .wrapper-collection-info.mint .collection-mint-button {
-    width: 100%;
+    /* width: 100%; */
   }
 
   .collection-mint-button div {
